sp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shinyproxy
  namespace: shiny
spec:
  selector:
    matchLabels:
      run: shinyproxy
  replicas: 2
  template:
    metadata:
      labels:
        run: shinyproxy
    spec:
      containers:
      - name: shinyproxy
        image: 467455613745.dkr.ecr.cn-northwest-1.amazonaws.com.cn/shinyproxy-application:share10
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      - name: kube-proxy-sidecar
        image: 467455613745.dkr.ecr.cn-northwest-1.amazonaws.com.cn/kube-proxy-sidecar:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
      imagePullSecrets:
